crates/quant-pivot-models/tests/snapshots/report_payload_snapshots__non_empty_topn_report_snapshot.snap
---
source: crates/quant-pivot-models/tests/report_payload_snapshots.rs
expression: non_empty_topn_report()
---
{
  "report": {
    "recommendation_report_id": "f7a59e75-1560-57c2-abc0-972ac075aef0",
    "profile_ref": {
      "id": "weather_forecast_24h",
      "version": 1,
      "content_hash": "blake3:a6f9e3ab46e5e9e4cd8d10bbc6ebf2755d5488baac2565c0ad0c91482e3baf8f"
    },
    "report_kind": "top_n",
    "trigger_kind": "scheduled",
    "trigger_key": "scheduled:daily-topn:2023-11-14T22:13:20Z",
    "trigger_time": "2023-11-14T22:13:20Z",
    "knowledge_lag_secs": 120,
    "decision_at": "2023-11-14T22:11:20Z",
    "horizon_secs": 86400,
    "runtime_mode": "report_only",
    "top_n": 20,
    "status": "published",
    "account_source": "polymarket",
    "capital_base_usd": "10000",
    "account_snapshot_ref": "6412901d-5f81-5835-8ada-63231d3ffc4f",
    "runtime_config_version_id": "731ac405-b5b5-5dee-96b2-67c8d184c177",
    "model_run_id": null,
    "model_version_id": "45641765-a964-5c43-b586-8330968f4c8c",
    "market_selection_id": "5c8ad0ca-ddea-5da4-9b57-8bd80bd64365",
    "summary": {
      "market_selection_count": 12,
      "candidate_count": 8,
      "rejected_count": 3,
      "published_recommendation_count": 2,
      "total_suggested_usd": "500",
      "max_single_recommendation_usd": "300",
      "aggregate_exposure_cap_usd": "2500",
      "category_allocation": {},
      "event_allocation": {},
      "average_score": "0.7",
      "min_score": "0.55",
      "model_confidence_summary": {
        "mean_confidence": "0.72",
        "min_confidence": "0.6",
        "max_confidence": "0.9"
      },
      "data_quality_summary": {
        "fresh_count": 5,
        "acceptable_count": 2,
        "degraded_count": 1,
        "stale_count": 0,
        "insufficient_count": 0
      },
      "top_rejection_reasons": [],
      "execution_eligibility_summary": {
        "eligible_report_only": 2,
        "eligible_semi_auto": 0,
        "eligible_auto_execution": 0
      },
      "empty_reason": null,
      "warnings": [
        "thin book on 1 market"
      ]
    },
    "fact_delivery": null,
    "published_at": "2023-11-14T22:13:20Z",
    "revoked_at": null,
    "expired_at": null,
    "status_reason": null,
    "created_at": "2023-11-14T22:13:20Z"
  },
  "recommendations": [
    {
      "recommendation_id": "f007513a-f95b-580a-ae17-8c85e32c9fdb",
      "recommendation_report_id": "f7a59e75-1560-57c2-abc0-972ac075aef0",
      "rank": 1,
      "market_id": "0xmarketA",
      "event_id": "evt-1",
      "token_id": "token-0xmarketA",
      "outcome_side": "yes",
      "composite_score": "0.71",
      "risk_adjusted_score": "0.66",
      "confidence": "0.72",
      "expected_return_bps": "150",
      "downside_bps": "80",
      "identity": {
        "category": "politics",
        "question": "Will the event resolve Yes?",
        "outcome_name": "Yes"
      },
      "market_context": {
        "best_bid": "0.41",
        "best_ask": "0.43",
        "mid_price": "0.42",
        "spread_bps": "50",
        "depth_usd": "5000",
        "volume_24h_usd": "10000",
        "book_age_ms": 500,
        "time_to_resolution_secs": 86400,
        "market_status": "active",
        "neg_risk": false,
        "tick_size": "0.01",
        "fee_rate": null
      },
      "rank_before_portfolio": 1,
      "liquidity_score": "0.8",
      "data_quality_score": "0.9",
      "model_score_percentile": "0.75",
      "trade_plan": {
        "kind": "frozen",
        "policy": {
          "artifact_id": "a8f80211-bf62-5e7b-acd9-54e24dfe89df",
          "artifact_hash": "blake3:0000000000000000000000000000000000000000000000000000000000000000",
          "cohort_index": 0,
          "cohort_key": {
            "profile_ref": {
              "id": "pooled_1h_control",
              "version": 1,
              "content_hash": "blake3:f4d72f1debf42a98d8659d3604069675ee38472f65f8b3dbbd550129aa3ff23c"
            },
            "category": "politics",
            "horizon_secs": 86400,
            "entry_price_min": "0.01",
            "entry_price_max": "0.99",
            "cash_budget_tier": "250",
            "liquidity": {
              "methodology_id": "fixture-v1",
              "methodology_hash": "blake3:0000000000000000000000000000000000000000000000000000000000000000",
              "bucket_id": "fixture"
            },
            "volatility": {
              "methodology_id": "fixture-v1",
              "methodology_hash": "blake3:0000000000000000000000000000000000000000000000000000000000000000",
              "bucket_id": "fixture"
            }
          }
        },
        "entry": {
          "condition": {
            "kind": "immediate"
          },
          "order_policy": {
            "kind": "passive",
            "limit_price": "0.43",
            "post_only": true
          },
          "max_slippage_bps": "50",
          "valid_from": "2023-11-14T22:13:20Z",
          "valid_until": "2023-11-14T23:13:20Z",
          "min_depth_usd": "100",
          "max_book_age_ms": 2000,
          "cancel_if_not_triggered": true,
          "entry_reason": "limit entry at edge"
        },
        "sizing": {
          "suggested_usd": "300",
          "suggested_shares": "500",
          "max_usd": "500",
          "min_usd": "10",
          "portfolio_weight_pct": "0.05",
          "market_exposure_after_usd": "300",
          "event_exposure_after_usd": "300",
          "category_exposure_after_usd": "300",
          "binding_constraint": "kelly_cap",
          "sizing_reason": "half-kelly capped",
          "sizing_model": "kelly",
          "edge_bps": "120",
          "kelly_fraction_applied": "0.5",
          "edge_uncertainty_shrink_applied": null,
          "correlation_shrink_applied": null,
          "f_star_applied": "1.0",
          "kelly_fraction_config_applied": "0.5",
          "confidence_shrink_applied": "1.0",
          "drawdown_shrink_applied": "1.0",
          "raw_fraction_applied": "0.5",
          "position_cap_fraction_applied": "0.05"
        },
        "exit": {
          "take_profit_price": "0.7",
          "take_profit_pct": "0.6",
          "stop_loss_price": "0.3",
          "stop_loss_pct": "0.3",
          "time_exit_at": null,
          "max_hold_secs": 86400,
          "scale_out_targets": [],
          "trailing_stop": null,
          "thesis_invalidation": {
            "min_score_retention": "0.6",
            "min_expected_return_bps": "0",
            "require_execution_eligibility": true
          },
          "opportunistic_exit": {
            "min_confidence": "0.65",
            "min_expected_alpha_bps": "50",
            "min_p_exit_better": "0.5",
            "max_cumulative_exit_pct": "1",
            "min_incremental_exit_pct": "0.1"
          },
          "settlement_mode": "hold_to_resolution",
          "redeem_policy": "manual",
          "manual_review_at": null,
          "exit_reason": "tp/sl"
        },
        "risk_envelope": {
          "max_loss_usd": "120",
          "max_slippage_bps": "50",
          "max_position_usd": "500",
          "max_market_exposure_usd": "500",
          "max_event_exposure_usd": "750",
          "max_category_exposure_usd": "1500",
          "requires_approval": true,
          "auto_execution_allowed": false,
          "risk_notes": [
            "thin book"
          ],
          "envelope_hash": "blake3:0000000000000000000000000000000000000000000000000000000000000000"
        }
      },
      "factor_breakdown": [
        {
          "factor_name": "liquidity_depth",
          "family": "liquidity",
          "value_state": "scored",
          "raw_value": "1234.5",
          "normalized_score": "0.8",
          "normalization_source": "cross_section",
          "indeterminate_reason": null,
          "weight": "0.4",
          "contribution": "0.32",
          "confidence": "0.75",
          "direction": "positive",
          "explanation": "deep book",
          "source_refs": [
            "feature:liquidity_depth"
          ]
        }
      ],
      "execution_eligibility": {
        "eligible_modes": [
          "report_only"
        ],
        "ineligibility_reasons": [
          "report_only_mode"
        ],
        "approval_required": true,
        "auto_policy_id": null,
        "uncalibrated_watermark": false
      },
      "valid_from": "2023-11-14T22:13:20Z",
      "valid_until": "2023-11-15T22:13:20Z",
      "status": "published",
      "created_at": "2023-11-14T22:13:20Z",
      "report_status": "published",
      "active_order_intent_id": null
    },
    {
      "recommendation_id": "a1ce9884-a3e7-5c5f-bef0-a07ce3923c65",
      "recommendation_report_id": "f7a59e75-1560-57c2-abc0-972ac075aef0",
      "rank": 2,
      "market_id": "0xmarketB",
      "event_id": "evt-1",
      "token_id": "token-0xmarketB",
      "outcome_side": "no",
      "composite_score": "0.71",
      "risk_adjusted_score": "0.66",
      "confidence": "0.72",
      "expected_return_bps": "150",
      "downside_bps": "80",
      "identity": {
        "category": "politics",
        "question": "Will the event resolve Yes?",
        "outcome_name": "Yes"
      },
      "market_context": {
        "best_bid": "0.41",
        "best_ask": "0.43",
        "mid_price": "0.42",
        "spread_bps": "50",
        "depth_usd": "5000",
        "volume_24h_usd": "10000",
        "book_age_ms": 500,
        "time_to_resolution_secs": 86400,
        "market_status": "active",
        "neg_risk": false,
        "tick_size": "0.01",
        "fee_rate": null
      },
      "rank_before_portfolio": 2,
      "liquidity_score": "0.8",
      "data_quality_score": "0.9",
      "model_score_percentile": "0.75",
      "trade_plan": {
        "kind": "frozen",
        "policy": {
          "artifact_id": "a8f80211-bf62-5e7b-acd9-54e24dfe89df",
          "artifact_hash": "blake3:0000000000000000000000000000000000000000000000000000000000000000",
          "cohort_index": 0,
          "cohort_key": {
            "profile_ref": {
              "id": "pooled_1h_control",
              "version": 1,
              "content_hash": "blake3:f4d72f1debf42a98d8659d3604069675ee38472f65f8b3dbbd550129aa3ff23c"
            },
            "category": "politics",
            "horizon_secs": 86400,
            "entry_price_min": "0.01",
            "entry_price_max": "0.99",
            "cash_budget_tier": "250",
            "liquidity": {
              "methodology_id": "fixture-v1",
              "methodology_hash": "blake3:0000000000000000000000000000000000000000000000000000000000000000",
              "bucket_id": "fixture"
            },
            "volatility": {
              "methodology_id": "fixture-v1",
              "methodology_hash": "blake3:0000000000000000000000000000000000000000000000000000000000000000",
              "bucket_id": "fixture"
            }
          }
        },
        "entry": {
          "condition": {
            "kind": "immediate"
          },
          "order_policy": {
            "kind": "passive",
            "limit_price": "0.43",
            "post_only": true
          },
          "max_slippage_bps": "50",
          "valid_from": "2023-11-14T22:13:20Z",
          "valid_until": "2023-11-14T23:13:20Z",
          "min_depth_usd": "100",
          "max_book_age_ms": 2000,
          "cancel_if_not_triggered": true,
          "entry_reason": "limit entry at edge"
        },
        "sizing": {
          "suggested_usd": "200",
          "suggested_shares": "500",
          "max_usd": "500",
          "min_usd": "10",
          "portfolio_weight_pct": "0.05",
          "market_exposure_after_usd": "200",
          "event_exposure_after_usd": "200",
          "category_exposure_after_usd": "200",
          "binding_constraint": "kelly_cap",
          "sizing_reason": "half-kelly capped",
          "sizing_model": "kelly",
          "edge_bps": "120",
          "kelly_fraction_applied": "0.5",
          "edge_uncertainty_shrink_applied": null,
          "correlation_shrink_applied": null,
          "f_star_applied": "1.0",
          "kelly_fraction_config_applied": "0.5",
          "confidence_shrink_applied": "1.0",
          "drawdown_shrink_applied": "1.0",
          "raw_fraction_applied": "0.5",
          "position_cap_fraction_applied": "0.05"
        },
        "exit": {
          "take_profit_price": "0.7",
          "take_profit_pct": "0.6",
          "stop_loss_price": "0.3",
          "stop_loss_pct": "0.3",
          "time_exit_at": null,
          "max_hold_secs": 86400,
          "scale_out_targets": [],
          "trailing_stop": null,
          "thesis_invalidation": {
            "min_score_retention": "0.6",
            "min_expected_return_bps": "0",
            "require_execution_eligibility": true
          },
          "opportunistic_exit": {
            "min_confidence": "0.65",
            "min_expected_alpha_bps": "50",
            "min_p_exit_better": "0.5",
            "max_cumulative_exit_pct": "1",
            "min_incremental_exit_pct": "0.1"
          },
          "settlement_mode": "hold_to_resolution",
          "redeem_policy": "manual",
          "manual_review_at": null,
          "exit_reason": "tp/sl"
        },
        "risk_envelope": {
          "max_loss_usd": "120",
          "max_slippage_bps": "50",
          "max_position_usd": "500",
          "max_market_exposure_usd": "500",
          "max_event_exposure_usd": "750",
          "max_category_exposure_usd": "1500",
          "requires_approval": true,
          "auto_execution_allowed": false,
          "risk_notes": [
            "thin book"
          ],
          "envelope_hash": "blake3:0000000000000000000000000000000000000000000000000000000000000000"
        }
      },
      "factor_breakdown": [
        {
          "factor_name": "liquidity_depth",
          "family": "liquidity",
          "value_state": "scored",
          "raw_value": "1234.5",
          "normalized_score": "0.8",
          "normalization_source": "cross_section",
          "indeterminate_reason": null,
          "weight": "0.4",
          "contribution": "0.32",
          "confidence": "0.75",
          "direction": "positive",
          "explanation": "deep book",
          "source_refs": [
            "feature:liquidity_depth"
          ]
        }
      ],
      "execution_eligibility": {
        "eligible_modes": [
          "report_only"
        ],
        "ineligibility_reasons": [
          "report_only_mode"
        ],
        "approval_required": true,
        "auto_policy_id": null,
        "uncalibrated_watermark": false
      },
      "valid_from": "2023-11-14T22:13:20Z",
      "valid_until": "2023-11-15T22:13:20Z",
      "status": "published",
      "created_at": "2023-11-14T22:13:20Z",
      "report_status": "published",
      "active_order_intent_id": null
    }
  ]
}
