crates/quant-pivot-models/tests/snapshots/report_payload_snapshots__recommendation_limit_entry_snapshot.snap
---
source: crates/quant-pivot-models/tests/report_payload_snapshots.rs
expression: recommendation_limit_entry()
---
{
  "recommendation_id": "f4910694-84c7-588f-a588-b768785d3c71",
  "recommendation_report_id": "f7a59e75-1560-57c2-abc0-972ac075aef0",
  "rank": 1,
  "market_id": "0xmarketA",
  "event_id": "evt-1",
  "token_id": "token-0xmarketA",
  "outcome_side": "yes",
  "composite_score": "0.71",
  "risk_adjusted_score": "0.66",
  "confidence": "0.72",
  "expected_return_bps": "150",
  "downside_bps": "80",
  "identity": {
    "category": "politics",
    "question": "Will the event resolve Yes?",
    "outcome_name": "Yes"
  },
  "market_context": {
    "best_bid": "0.41",
    "best_ask": "0.43",
    "mid_price": "0.42",
    "spread_bps": "50",
    "depth_usd": "5000",
    "volume_24h_usd": "10000",
    "book_age_ms": 500,
    "time_to_resolution_secs": 86400,
    "market_status": "active",
    "neg_risk": false,
    "tick_size": "0.01",
    "fee_rate": null
  },
  "rank_before_portfolio": 1,
  "liquidity_score": "0.8",
  "data_quality_score": "0.9",
  "model_score_percentile": "0.75",
  "entry_plan": {
    "trade_policy": null,
    "trigger": {
      "kind": "price_condition",
      "comparison": "at_or_below",
      "threshold": "0.42",
      "confirmation_secs": 30,
      "max_observation_gap_ms": 2000
    },
    "order_policy": {
      "kind": "passive",
      "limit_price": "0.42",
      "post_only": true
    },
    "max_slippage_bps": "50",
    "valid_from": "2023-11-14T22:13:20Z",
    "valid_until": "2023-11-14T23:13:20Z",
    "min_depth_usd": "100",
    "max_book_age_ms": 2000,
    "cancel_if_not_triggered": true,
    "entry_reason": "limit entry at edge"
  },
  "sizing_plan": {
    "suggested_usd": "250",
    "suggested_shares": "500",
    "max_usd": "500",
    "min_usd": "10",
    "portfolio_weight_pct": "0.05",
    "market_exposure_after_usd": "250",
    "event_exposure_after_usd": "250",
    "category_exposure_after_usd": "250",
    "binding_constraint": "kelly_cap",
    "sizing_reason": "half-kelly capped",
    "sizing_model": "kelly",
    "edge_bps": "120",
    "kelly_fraction_applied": "0.5",
    "edge_uncertainty_shrink_applied": null,
    "correlation_shrink_applied": null,
    "f_star_applied": "1.0",
    "kelly_fraction_config_applied": "0.5",
    "confidence_shrink_applied": "1.0",
    "drawdown_shrink_applied": "1.0",
    "raw_fraction_applied": "0.5",
    "position_cap_fraction_applied": "0.05",
    "bet_structure_applied": "resolution"
  },
  "exit_plan": {
    "trade_policy": null,
    "take_profit_price": "0.7",
    "take_profit_pct": "0.6",
    "stop_loss_price": "0.3",
    "stop_loss_pct": "0.3",
    "time_exit_at": null,
    "max_hold_secs": 86400,
    "scale_out_targets": [],
    "trailing_stop": null,
    "thesis_invalidation": {
      "min_score_retention": "0.6",
      "min_expected_return_bps": "0",
      "require_execution_eligibility": true
    },
    "settlement_mode": "hold_to_resolution",
    "redeem_policy": "manual",
    "manual_review_at": null,
    "exit_reason": "tp/sl"
  },
  "risk_envelope": {
    "max_loss_usd": "120",
    "max_slippage_bps": "50",
    "max_position_usd": "500",
    "max_market_exposure_usd": "500",
    "max_event_exposure_usd": "750",
    "max_category_exposure_usd": "1500",
    "requires_approval": true,
    "auto_execution_allowed": false,
    "risk_notes": [
      "thin book"
    ],
    "envelope_hash": "blake3:0000000000000000000000000000000000000000000000000000000000000000"
  },
  "factor_breakdown": [
    {
      "factor_name": "liquidity_depth",
      "family": "liquidity",
      "value_state": "scored",
      "raw_value": "1234.5",
      "normalized_score": "0.8",
      "normalization_source": "cross_section",
      "indeterminate_reason": null,
      "weight": "0.4",
      "contribution": "0.32",
      "confidence": "0.75",
      "direction": "positive",
      "explanation": "deep book",
      "source_refs": [
        "feature:liquidity_depth"
      ]
    }
  ],
  "execution_eligibility": {
    "eligible_modes": [
      "report_only"
    ],
    "ineligibility_reasons": [
      "report_only_mode"
    ],
    "approval_required": true,
    "auto_policy_id": null,
    "uncalibrated_watermark": false
  },
  "valid_from": "2023-11-14T22:13:20Z",
  "valid_until": "2023-11-15T22:13:20Z",
  "status": "published",
  "created_at": "2023-11-14T22:13:20Z",
  "report_status": "published",
  "active_order_intent_id": null
}
